--- a/blog.html
+++ b/blog.html
@@ -58,6 +58,7 @@
 <li> <a class="page-scroll" href=People.html>People</a></li>
 <li> <a class="page-scroll" href=Streets.html>Streets</a></li>
 <li> <a class="page-scroll" href=Transportation.html>Transportation</a></li>
+<li> <a class="page-scroll" href=Society_News.html>Society_News</a></li>
           
         </ul>
       </div>
@@ -241,6 +242,118 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Chateaugay Historical Society Update</h2>
+      <hr>
+      <h5>April 25, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">1 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">2 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">3 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">4 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">5 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">6 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">7 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">8 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">9 / 9</div>
+    <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>We thought it was important to provide an update for our members and supporters of our efforts over the last year as we have been closed to the public.</p> 
+
+<p>The past thirteen months have been challenging for the Chateaugay Historical Society as the COVID pandemic has been in our midst. We closed the Archival Center to the public in March of last year when the stay-at-home order went into effect. In fact, we mailed the first newsletter of 2020 just as the shutdown began.</p>
+
+<p>Not knowing how long we would be closed, our first concern was how we would maintain our public presence since we wouldn’t be allowed to host our exhibits or plan public programs. Fortunately, we were able to continue our newsletter publication schedule and each issue has gone out more or less on time since March of 2020. We didn’t miss a single issue.</p> 
+
+<p>Our posts on Facebook have continued to appear and the engagement with all the “Chateaugay Folks” out there has been amazing as always. We are always so in awe of the discussion threads that result from Facebook posts and how many memories and questions are triggered either by the topic or by the resulting comments.</p>
+
+<p>As we have kept the newsletter and Facebook posts coming, much has happened behind the scenes. Research has continued for the many topics we hope to include in future issues of the newsletter. We have also taken the opportunity to put much effort into the Archival Center and have reconfigured our physical layout while greatly improving our storage capacity. During all that time, our archival collection has steadily grown. Object, photo, document and artifact donations have never really slowed as more and more generous people have come forward to help our repository of Chateaugay history become more complete and interesting.
+To keep you all informed, here are some of the activities we have worked on over the past year: </p>
+
+<p>A staircase was built to our upper level storage area and that space has been outfitted with archival safe racks. It now houses collection storage supplies and parts of our accessioned archives. </p>
+
+<p>We now have a flat-file map case unit to store larger flat objects and documents. One of the first collection pieces that was added to the map case was our assortment of local War of 1812 artifacts. During that war, between five and six thousand American troops (both regular army and militia) were staged in Chateaugay for about a month prior to the invasion into Canada and the Battle of Chateauguay (Quebec). The artifacts located so far seem to have come from small encampments of soldiers (perhaps as few as ten). The large camps of hundreds of troops haven’t been found yet but we know those locations are still out there.</p>
+
+<p>We have had two more of our J.W. Gray oil paintings restored by Phillips Art Conservation of Essex, NY. Emily Phillips’ expertise has led to the paintings being cleaned, repaired and reconditioned. They are spectacular!</p>
+
+<p>We also took the closed time as an opportunity to rearrange our main space in the Archival Center. Our office space is now adjacent to our storage room and upper level stairway. We have three computer stations within the office area. One is dedicated primarily to accessioning our collection, one is for working with our rapidly growing photo archives and the third is being utilized in the many scanning projects we have underway. Scanning of letters, old ledgers and diaries (primarily the Gates Hoit papers which date back to the early 1800s) will allow us to have them available for research without having to handle the actual documents. Out stand scanner has proven invaluable in this process.</p>
+
+<p>We have also relocated our two public computers to the front corner of the Archival Center. Each machine has a dedicated printer and has databases and bookmarks ready for local history or family history researchers once we reopen.</p>
+
+<p>Thanks to trustee Katelyn Legacy-Roulston, we now have our own website. During the pandemic, Katelyn developed the format and content now available at www.chateaugayhistory.org The website is a true work in progress as we talk about what we can add, how we can better tell Chateaugay’s story, and what (and how) to add resources for folks to access and explore. Her expertise and efforts have been invaluable.</p>
+
+<p>In spite of the challenges to instruction (with virtual or hybrid class attendance, etc.), we were able to contribute to the annual WWII/Pearl Harbor exhibit at CCS this past fall. This is an ongoing project spearheaded and funded by Chateaugay native, Joe Ryan. Shannon Wiese, the 11th and 12th grade Social Studies teacher, developed a small exhibit commemorating Pearl Harbor last December and is following that up with a planned virtual exhibit this spring as she engages her students with this topic in these challenging instructional times.</p>
+
+<p>As you can see, we have kept busy behind the scenes over the last thirteen months. Suffice it to say, none of this would have been possible without the generosity and support of our members and benefactors.</p> 
+
+<p>As reopening the Archival Center appears on the horizon, we are working on a public exhibit for this summer which will be presented with all the appropriate recommended public health guidelines. The topic will be “Photographers Associated with Chateaugay” over the years. Two dozen photographers will be profiled and examples of their work will be shown. In addition, we will have a display of cameras and other photographic equipment that will illustrate the history and development of these devices. More details regarding exhibit opening, hours, etc. will be posted both on our website and here on Facebook as we progress and as opening guidelines develop.</p>
+
+<p>Again, we are humbled and grateful for all the support our members continue to show us. Your emotional and financial support have allowed us to become far more than we expected we would be since our founding back in 2007. We constantly strive to do your support proud and to preserve and present Chateaugay’s story whenever we can. Thanks.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog1">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
       <hr>
       <h5>April 24, 2021 | Mick Jarvis</h5>
@@ -252,21 +365,21 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -283,49 +396,6 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
 <p>"When my Mom ran the stand she needed the recipe to be private, so did my Nanny and Gramps. I hope you will include the recipe in the article. So many people enjoyed the michigans and remember them after so many years. I think we should keep the Chateaugay tradition going. I would like to think that a new generation of Chateaugay will start to enjoy the recipe and have them at their summer gatherings."</p>
 
 <p>A photo of the stand on West Main and Jake’s original sauce recipe are featured here. Enjoy!</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
-      <hr>
-      <h5>April 18, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Did you know Chateaugay had its own door to door delivery service back in the 1950s? This 1955 image shows one of Chateaugay Dairy's deilvery drivers, Owen Murray.</p>
-
-<p>The first image shows an overview of the photograph while the second shows a close up of Owen.</p>
         </div>
     </div>
 </div>
