--- a/Farms.html
+++ b/Farms.html
@@ -58,6 +58,7 @@
 <li> <a class="page-scroll" href=People.html>People</a></li>
 <li> <a class="page-scroll" href=Streets.html>Streets</a></li>
 <li> <a class="page-scroll" href=Transportation.html>Transportation</a></li>
+<li> <a class="page-scroll" href=Society_News.html>Society_News</a></li>
           
         </ul>
       </div>
