Python Made pages

--- a/Transportation.html
+++ b/Transportation.html
@@ -173,30 +173,29 @@
 
 <p>Eventually, competition from new and faster methods of shipping goods led to the railroad’s inability to maintain a profit with the northern New York line. On June 5, 1965 the last train rolled through Chateaugay and the railroad era came to a local end.</p>
 
-<p>***********************************************************</p>
+<p><h3>Chateaugay Record - June 9, 1967</h3></p>
 
 <p>The following column appeared in the Chateaugay Record on June 9, 1967. It captures what the railroad meant to Chateaugay and the change about to happen with its closure.</p>
 
-<p>Last Train Passes Through</p>
+<p><b><i>Last Train Passes Through</b></i></p>
 
-<p>One hundred and fifteen [seventeen] years of railroading in Chateaugay, almost to the day, took place last Friday as the last locomotive to pass through town neared the crossing on Depot St. Only a few people were present to watch the last train pull thought at about midday to pass into history and to end an era of railroading in this section of Northern New York.</p>
+<p><i>One hundred and fifteen [seventeen] years of railroading in Chateaugay, almost to the day, took place last Friday as the last locomotive to pass through town neared the crossing on Depot St. Only a few people were present to watch the last train pull thought at about midday to pass into history and to end an era of railroading in this section of Northern New York.</i></p>
 
-<p>The quiet exit of the last train was a far cry from that eventful day, June 1, 1850, when nearly every person in town was present to hail the arrival of the first passenger train into Chateaugay.</p>
+<p><i>The quiet exit of the last train was a far cry from that eventful day, June 1, 1850, when nearly every person in town was present to hail the arrival of the first passenger train into Chateaugay.</i></p>
 
-<p>Hundreds of enthusiastic citizens lined the tracks to welcome the train pulled by a steam locomotive bearing the Town’s name. Remembering that the event was the culmination of twenty years of striving, anxiety and sacrifice, the townspeople looked forward to the prosperity and growth that the new railroad would bring.
-Indeed, their vision was not far wrong. By the late 1800s the town was booming, with local factories and farmers alike reaping the benefit of the newly opened markets on the east coast.</p>
+<p><i>Hundreds of enthusiastic citizens lined the tracks to welcome the train pulled by a steam locomotive bearing the Town’s name. Remembering that the event was the culmination of twenty years of striving, anxiety and sacrifice, the townspeople looked forward to the prosperity and growth that the new railroad would bring.
+Indeed, their vision was not far wrong. By the late 1800s the town was booming, with local factories and farmers alike reaping the benefit of the newly opened markets on the east coast.</i></p>
 
-<p>Eventually competition in the form of better highways, mass produced autos and trucks, made itself felt and business and profits of the Rutland Railroad steadily declined.</p>
+<p><i>Eventually competition in the form of better highways, mass produced autos and trucks, made itself felt and business and profits of the Rutland Railroad steadily declined.</i></p>
 
-<p>Although efforts were made in the post-World War II days to recapture some of the freight business, the railroad eventually realized it was a losing battle and with the event of a strike by employees a few years ago, ceased operations completely.</p>
+<p><i>Although efforts were made in the post-World War II days to recapture some of the freight business, the railroad eventually realized it was a losing battle and with the event of a strike by employees a few years ago, ceased operations completely.</i></p>
 
-<p>Now the trains and indeed even the rails are gone and soon all traces of railroading will be erased from the local scene – with only the memory of the mournful train whistle sounding in the early morning hours remaining of what was once the pride and joy of the North Country.</p>
+<p><i>Now the trains and indeed even the rails are gone and soon all traces of railroading will be erased from the local scene – with only the memory of the mournful train whistle sounding in the early morning hours remaining of what was once the pride and joy of the North Country.</i></p>
 
-<p>The timeline below sets the details and dates of Chateaugay’s railroad experience. Following that is a selection of images of the trains and the depot from across the years.</p>
+<p>The timeline below sets the details and dates of Chateaugay’s railroad experience. The included images are of the trains and the depot from across the years.</p>
 
-<p>************************************************************</p>
 
-<p>Timeline of the Railroad in Chateaugay</p>
+<p><h3>Timeline of the Railroad in Chateaugay</h3></p>
 
 <li>1850 – The first train passes through Chateaugay on June 4. </li>
 
@@ -243,7 +242,7 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [May 09, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [May 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
