--- a/Businesses.html
+++ b/Businesses.html
@@ -72,6 +72,43 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Ode To Jake's</h2>
+      <hr>
+      <h5>April 28, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2021-04-28_odetojakes/odetojakes_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>I think this poem should be the official tribute to Jake's Red Hots. These twelve stanzas capture the Jake’s experience perfectly. This “Ode to Jake’s” along with the many warm memories of that little stand that everyone has shared on Facebook, will insure that Jake's forever remains a treasured and significant memory of Chateaugay's history. </p>
+
+<p>I am going to make it a part of the Historical Society's archival collection.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
       <hr>
       <h5>April 24, 2021 | Mick Jarvis</h5>
@@ -83,21 +120,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -120,7 +157,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -134,21 +171,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -163,7 +200,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>East Main Street Postcard</h2>
@@ -177,15 +214,15 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-03-26_eastmainstreetpostcard/eastmainstreetpostcard_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -214,7 +251,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>West Main Street Pre WWI</h2>
@@ -228,51 +265,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-03-06_westmainstreetpreWWI/westmainstreetpreWWI_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -309,7 +346,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>East Main Street & Business Ads</h2>
@@ -323,171 +360,171 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">3 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">4 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">5 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">6 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">7 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">8 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">9 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">10 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">11 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">12 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">13 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">14 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">15 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_15.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">16 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_16.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">17 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_17.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">18 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_18.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">19 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_19.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">20 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_20.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">21 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_21.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">22 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_22.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">23 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_23.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">24 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_24.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">25 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_25.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">26 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_26.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">27 / 27</div>
     <img src="blog/imgs/2021-02-28_emainbusinessads/emainbusinessads_27.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -506,7 +543,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Anderson Block</h2>
@@ -520,99 +557,99 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">1 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">2 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">3 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">4 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">5 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">6 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">7 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">8 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">9 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">10 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">11 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">12 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">13 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">14 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">15 / 15</div>
     <img src="blog/imgs/2021-02-12_andersonblock/2021-02-12_andersonblock_15.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
 </div>
 <br>
 
@@ -639,7 +676,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Key Bank</h2>
@@ -653,33 +690,33 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_2.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_3.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-02-07_keybank/2021-02-07_keybank_4.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 7)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 7)">&#10095;</a>
 </div>
 <br>
 
@@ -708,7 +745,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [May 09, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [May 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
