--- a/blog.html
+++ b/blog.html
@@ -173,30 +173,29 @@
 
 <p>Eventually, competition from new and faster methods of shipping goods led to the railroad’s inability to maintain a profit with the northern New York line. On June 5, 1965 the last train rolled through Chateaugay and the railroad era came to a local end.</p>
 
-<p>***********************************************************</p>
+<p><h3>Chateaugay Record - June 9, 1967</h3></p>
 
 <p>The following column appeared in the Chateaugay Record on June 9, 1967. It captures what the railroad meant to Chateaugay and the change about to happen with its closure.</p>
 
-<p>Last Train Passes Through</p>
+<p><b><i>Last Train Passes Through</b></i></p>
 
-<p>One hundred and fifteen [seventeen] years of railroading in Chateaugay, almost to the day, took place last Friday as the last locomotive to pass through town neared the crossing on Depot St. Only a few people were present to watch the last train pull thought at about midday to pass into history and to end an era of railroading in this section of Northern New York.</p>
+<p><i>One hundred and fifteen [seventeen] years of railroading in Chateaugay, almost to the day, took place last Friday as the last locomotive to pass through town neared the crossing on Depot St. Only a few people were present to watch the last train pull thought at about midday to pass into history and to end an era of railroading in this section of Northern New York.</i></p>
 
-<p>The quiet exit of the last train was a far cry from that eventful day, June 1, 1850, when nearly every person in town was present to hail the arrival of the first passenger train into Chateaugay.</p>
+<p><i>The quiet exit of the last train was a far cry from that eventful day, June 1, 1850, when nearly every person in town was present to hail the arrival of the first passenger train into Chateaugay.</i></p>
 
-<p>Hundreds of enthusiastic citizens lined the tracks to welcome the train pulled by a steam locomotive bearing the Town’s name. Remembering that the event was the culmination of twenty years of striving, anxiety and sacrifice, the townspeople looked forward to the prosperity and growth that the new railroad would bring.
-Indeed, their vision was not far wrong. By the late 1800s the town was booming, with local factories and farmers alike reaping the benefit of the newly opened markets on the east coast.</p>
+<p><i>Hundreds of enthusiastic citizens lined the tracks to welcome the train pulled by a steam locomotive bearing the Town’s name. Remembering that the event was the culmination of twenty years of striving, anxiety and sacrifice, the townspeople looked forward to the prosperity and growth that the new railroad would bring.
+Indeed, their vision was not far wrong. By the late 1800s the town was booming, with local factories and farmers alike reaping the benefit of the newly opened markets on the east coast.</i></p>
 
-<p>Eventually competition in the form of better highways, mass produced autos and trucks, made itself felt and business and profits of the Rutland Railroad steadily declined.</p>
+<p><i>Eventually competition in the form of better highways, mass produced autos and trucks, made itself felt and business and profits of the Rutland Railroad steadily declined.</i></p>
 
-<p>Although efforts were made in the post-World War II days to recapture some of the freight business, the railroad eventually realized it was a losing battle and with the event of a strike by employees a few years ago, ceased operations completely.</p>
+<p><i>Although efforts were made in the post-World War II days to recapture some of the freight business, the railroad eventually realized it was a losing battle and with the event of a strike by employees a few years ago, ceased operations completely.</i></p>
 
-<p>Now the trains and indeed even the rails are gone and soon all traces of railroading will be erased from the local scene – with only the memory of the mournful train whistle sounding in the early morning hours remaining of what was once the pride and joy of the North Country.</p>
+<p><i>Now the trains and indeed even the rails are gone and soon all traces of railroading will be erased from the local scene – with only the memory of the mournful train whistle sounding in the early morning hours remaining of what was once the pride and joy of the North Country.</i></p>
 
-<p>The timeline below sets the details and dates of Chateaugay’s railroad experience. Following that is a selection of images of the trains and the depot from across the years.</p>
+<p>The timeline below sets the details and dates of Chateaugay’s railroad experience. The included images are of the trains and the depot from across the years.</p>
 
-<p>************************************************************</p>
 
-<p>Timeline of the Railroad in Chateaugay</p>
+<p><h3>Timeline of the Railroad in Chateaugay</h3></p>
 
 <li>1850 – The first train passes through Chateaugay on June 4. </li>
 
@@ -242,6 +241,43 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Ode To Jake's</h2>
+      <hr>
+      <h5>April 28, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2021-04-28_odetojakes/odetojakes_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>I think this poem should be the official tribute to Jake's Red Hots. These twelve stanzas capture the Jake’s experience perfectly. This “Ode to Jake’s” along with the many warm memories of that little stand that everyone has shared on Facebook, will insure that Jake's forever remains a treasured and significant memory of Chateaugay's history. </p>
+
+<p>I am going to make it a part of the Historical Society's archival collection.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog1">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Chateaugay Historical Society Update</h2>
       <hr>
       <h5>April 25, 2021 | Mick Jarvis</h5>
@@ -253,63 +289,63 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -350,63 +386,12 @@ To keep you all informed, here are some of the activities we have worked on over
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Jake's Red Hots</h2>
-      <hr>
-      <h5>April 24, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 2</div>
-    <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 2</div>
-    <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Jake’s Red Hots were sold in the little stand on West Main Street from the summer of 1948 through the summer of 1966. The michigans sold at the stand during that time all had the original sauce developed by Jake LaPage. Beginning in the summer of 1967, the Furnia family rented the West Main Street stand and used their own recipe as Jake’s recipe was not included in the rental arrangement.</p>
-
-<p>In the mid-70s, the Furnias built the Whistle Stop on Depot Street in front of the RR Passenger Depot. The Whistle Stop remained open for about ten years.</p>
-
-<p>Today, excellent michigans are available locally at Wendy’s Quick Stop, Harrigan’s Soft Ice Cream and Fast Food, The Cherry Knoll and Dick’s Country Store. Each uses their own recipe for the sauce.</p>
-
-<p>The original Jake’s michigan sauce recipe was included in the article I wrote for the Historical Society newsletter. The long held family secret was printed in that article with the permission of Jake’s daughter, Linda LePage Orsborn. When I inquired about including the recipe, here is the note she sent me:</p>
-
-<p>"When my Mom ran the stand she needed the recipe to be private, so did my Nanny and Gramps. I hope you will include the recipe in the article. So many people enjoyed the michigans and remember them after so many years. I think we should keep the Chateaugay tradition going. I would like to think that a new generation of Chateaugay will start to enjoy the recipe and have them at their summer gatherings."</p>
-
-<p>A photo of the stand on West Main and Jake’s original sauce recipe are featured here. Enjoy!</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [May 09, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [May 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
