Add resource to index page

--- a/index.html
+++ b/index.html
@@ -327,10 +327,14 @@
         <h4>Tools for Educators</h4>
 		<ul>
 			<li>
-				<a href="CHS_Teacher Resources.pdf" target="new">Online Teacher Resources Sheet</a>
+				<a href="CHS_Teacher Resources.pdf" target="new">Online Teacher Resources Guide</a>
+			</li>	
+			<li>
+				<a href="https://considerthesourceny.org"
+			target="new">Consider the Source New York: Teaching with Historical Records</a>
 			</li>
-		</ul>	
-      </div>
+		</ul>
+		</div>	
       <div class="col-md-4 col-sm-6 skill"> 
         <h4>Archives Information</h4>
 		<ul>
@@ -482,7 +486,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [February 15, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [May 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
