2021-05-18_CHS Update Blog
Python generated pages

--- a/Society_News.html
+++ b/Society_News.html
@@ -72,6 +72,62 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Reopening, Newsletter, Exhibits and More!</h2>
+      <hr>
+      <h5>May 18, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 1</div>
+    <img src="blog/imgs/2021-05-18_chsupdate/chsupdate2_01.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>We have begun working on our next quarterly newsletter. We will have four articles in this issue:</p> 
+
+<p><b>First,</b> we will tell the story of “Chateaugay” winning the Kentucky Derby in 1963 and how the horse came to be named after our town. </p>
+
+<p><b>Second </b>will be about the life and times of Evelyn Nesbit Thaw, perhaps America’s first “supermodel”. She was a summer resident of Chateaugay Lake for a few years in the beginning of the last century. She always created a bit of a stir when she was here. She also made silent movies at the Lake when she was in residence at “Camp Jack” on the Upper Lake.</p>
+
+<p><b>Third </b>will be the 1931 story of a 41 year old pitcher for the Chateaugay Ponies who pitched two complete game shutouts in 48 hours over the Fourth of July weekend and then played the outfield and went 3 for 5 just two days later. Talk about an “Iron Man” performance…</p>
+
+<p><b>Fourth </b>will be the beginning of a series in which we will recognize the contributions of local veterans who served our country. Leading off this series will be the story of Walt Ouimet who served in WWII and again during the Korean War. He was a prisoner of war for 29 months during the Korean Conflict.</p>
+
+<p>There is much to read on a variety of topics in this upcoming issue. The Publications Committee has begun editing the articles. We hope to go to print in the next two weeks. Stay tuned as we progress.</p>
+
+<h3>OUR OTHER NEWS:</h3>
+<p>We will be reopening to the public for our regular schedule beginning on Wednesday, July 7. We will be open every Wednesday and Saturday morning from 9am until noon, starting July 7 through Wednesday, September 29.</p>
+
+<p>July 7 will also mark the opening of our first major exhibit in over 18 months. We are currently assembling the materials and objects for <b>“The History of Photography in Chateaugay.” </b>We have identified 25 photographers who have been associated with Chateaugay from the 1850s through 2021. We will have information about the photographers themselves, examples of their work, which will include many images of how Chateaugay has been portrayed over the years. Also, part of the exhibit will have examples of various photographic equipment and examples of different types of photographs.</p>
+
+<p>In addition, our newly rearranged public research area will be open anyone wishing to do local history or genealogical research. Our public computers have been set up with website links and data files to aid any researcher. Also, our shelves of public materials have been updated and rearranged for easy and efficient use.</p>
+
+<p>We have remained very busy during the COVID shutdown and we will be using the remaining weeks before July 7 to finish the photography exhibit, publish the newsletter and get the Archival Center ready for your visits and research. </p>
+
+<p>Please stop by and see all that we have to offer beginning on July 7. And, as always, thank you for the tremendous support you have given us over the years.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Chateaugay Historical Society Update</h2>
       <hr>
       <h5>April 25, 2021 | Mick Jarvis</h5>
@@ -83,63 +139,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -185,7 +241,7 @@ To keep you all informed, here are some of the activities we have worked on over
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [May 10, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [May 23, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
