2021-06-13 Blog Update - Python Automated
Smith / Alvord / Cook Home for Sale - East Main

--- a/People.html
+++ b/People.html
@@ -72,6 +72,88 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Smith / Alvord / Cook Home on East Main</h2>
+      <hr>
+      <h5>June 13, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <h4>MORE TRANSITIONS</h4>
+
+<p>Another of Chateaugay’s earliest and most note-worthy homes is transitioning. I refer to this house as the Smith/Alvord/Cook Home. It has been owned only by these three families since it was built by Colonel Thomas Smith in 1818. </p>
+
+<p>The Smith family had come to Chateaugay the year after it was originally settled in 1796. Col. Smith’s father, Jacob Smith had served in the American Revolution. He and his family arrived in Chateaugay in 1797. He lived on what we now refer to as the Earlville Road and began a small tannery operation on his property.</p>
+
+<p>Thomas Smith served as an officer during the War of 1812. He operated a tavern at the Four Corners which served as the headquarters for American General Wade Hampton during the war. He was one of the most influential local citizens, serving in various capacities in local government. The Colonel had this home built of locally quarried stone.</p>
+
+<p>The first photo shows a drawing of the original structure. It still serves as the main part of the house.</p>
+
+<p>This is really a three story house which was very unusual in this area in 1818.</p>
+
+<p>Servants’ quarters were on the basement level. Half of space was their living quarters, half of the space was the kitchen. The servants’ quarters were very comfortable with plaster and lath walls which were even wallpapered. </p>
+
+<p>All the local grocers were informed that any kitchen deliveries were to be made to the basement level and not the main or upper floors, which were the family’s spaces. There were two doorways to enter and exit the basement.</p>
+
+<p>The second photo shows a part of the cooking ovens and fireplaces in the basement.</p>
+
+<p>The Smith family sold to W.S. Alvord in the 1840s. Alvord family owned it for the next 80 years.</p>
+
+<p>It was purchased by the E. D. Cook family in 1923. Edwin Cook renovated the interior, adding modern plumbing and wiring. He also added the front porch of matching stone and the dormer across the north facing roof line. The original configuration of the interior framing and room sizes, etc. was left essentially unchanged.</p>
+
+<p>The third photo shows the house as it appears today. If you imagine the dormer and front porch not being there, it is easy to see that the main portion of the house is still the same as the original drawing.</p>
+
+<p>This is truly an historically significant home in the village. It resembles the original structure as much as possible considering that it has been continuously occupied for the last two hundred years. The only structural changes have been the porch and dormer. The inside is laid out much as it was when it was built.</p>
+
+<p>Because of the recent passings of Olin “Odie” and Barbara Cook, the house is now for sale. Odie and Barb were founding members of the Chateaugay Historical Society and were each named as a “Trustee Emeritus” when they retired from our Board. 
+They were fiercely proud of their home and its historical significance. They treasured its ambiance and were protective of its legacy.</p>
+
+<p>The fourth photo shows the home this morning (June 13, 2021).</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
       <hr>
       <h5>April 24, 2021 | Mick Jarvis</h5>
@@ -83,21 +165,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -120,7 +202,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -134,21 +216,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
