--- a/blog.html
+++ b/blog.html
@@ -72,6 +72,88 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Smith / Alvord / Cook Home on East Main</h2>
+      <hr>
+      <h5>June 13, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 4</div>
+    <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <h4>MORE TRANSITIONS</h4>
+
+<p>Another of Chateaugay’s earliest and most note-worthy homes is transitioning. I refer to this house as the Smith/Alvord/Cook Home. It has been owned only by these three families since it was built by Colonel Thomas Smith in 1818. </p>
+
+<p>The Smith family had come to Chateaugay the year after it was originally settled in 1796. Col. Smith’s father, Jacob Smith had served in the American Revolution. He and his family arrived in Chateaugay in 1797. He lived on what we now refer to as the Earlville Road and began a small tannery operation on his property.</p>
+
+<p>Thomas Smith served as an officer during the War of 1812. He operated a tavern at the Four Corners which served as the headquarters for American General Wade Hampton during the war. He was one of the most influential local citizens, serving in various capacities in local government. The Colonel had this home built of locally quarried stone.</p>
+
+<p>The first photo shows a drawing of the original structure. It still serves as the main part of the house.</p>
+
+<p>This is really a three story house which was very unusual in this area in 1818.</p>
+
+<p>Servants’ quarters were on the basement level. Half of space was their living quarters, half of the space was the kitchen. The servants’ quarters were very comfortable with plaster and lath walls which were even wallpapered. </p>
+
+<p>All the local grocers were informed that any kitchen deliveries were to be made to the basement level and not the main or upper floors, which were the family’s spaces. There were two doorways to enter and exit the basement.</p>
+
+<p>The second photo shows a part of the cooking ovens and fireplaces in the basement.</p>
+
+<p>The Smith family sold to W.S. Alvord in the 1840s. Alvord family owned it for the next 80 years.</p>
+
+<p>It was purchased by the E. D. Cook family in 1923. Edwin Cook renovated the interior, adding modern plumbing and wiring. He also added the front porch of matching stone and the dormer across the north facing roof line. The original configuration of the interior framing and room sizes, etc. was left essentially unchanged.</p>
+
+<p>The third photo shows the house as it appears today. If you imagine the dormer and front porch not being there, it is easy to see that the main portion of the house is still the same as the original drawing.</p>
+
+<p>This is truly an historically significant home in the village. It resembles the original structure as much as possible considering that it has been continuously occupied for the last two hundred years. The only structural changes have been the porch and dormer. The inside is laid out much as it was when it was built.</p>
+
+<p>Because of the recent passings of Olin “Odie” and Barbara Cook, the house is now for sale. Odie and Barb were founding members of the Chateaugay Historical Society and were each named as a “Trustee Emeritus” when they retired from our Board. 
+They were fiercely proud of their home and its historical significance. They treasured its ambiance and were protective of its legacy.</p>
+
+<p>The fourth photo shows the home this morning (June 13, 2021).</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Demo on West Main: McCoy and Denio Houses</h2>
       <hr>
       <h5>June 6, 2021 | Mick Jarvis</h5>
@@ -83,171 +165,171 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">10 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">11 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">12 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">13 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">14 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_14.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">15 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_15.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">16 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_16.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">17 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_17.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">18 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_18.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">19 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_19.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">20 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_20.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">21 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_21.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">22 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_22.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">23 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_23.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">24 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_24.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">25 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_25.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">26 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_26.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">27 / 27</div>
     <img src="blog/imgs/2021-06-06_mccoydeniodemo/mccoydeniodemo_27.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -315,7 +397,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Railroad: Freight Operation</h2>
@@ -329,33 +411,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -428,62 +510,6 @@
 <p>Of course, many other products were shipped from the Chateaugay freight depot as well. The listing above just summarizes some of the products shipped in extreme quantities. </p>
 
 <p>The railyard was constantly growing. Additional sidings were being built regularly to allow for the loading and unloading of various freight shipments. The RR grounds were easily the busiest place in the village with activity taking place almost twenty-four hours a day.</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Reopening, Newsletter, Exhibits and More!</h2>
-      <hr>
-      <h5>May 18, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 1</div>
-    <img src="blog/imgs/2021-05-18_chsupdate/chsupdate2_01.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>We have begun working on our next quarterly newsletter. We will have four articles in this issue:</p> 
-
-<p><b>First,</b> we will tell the story of “Chateaugay” winning the Kentucky Derby in 1963 and how the horse came to be named after our town. </p>
-
-<p><b>Second </b>will be about the life and times of Evelyn Nesbit Thaw, perhaps America’s first “supermodel”. She was a summer resident of Chateaugay Lake for a few years in the beginning of the last century. She always created a bit of a stir when she was here. She also made silent movies at the Lake when she was in residence at “Camp Jack” on the Upper Lake.</p>
-
-<p><b>Third </b>will be the 1931 story of a 41 year old pitcher for the Chateaugay Ponies who pitched two complete game shutouts in 48 hours over the Fourth of July weekend and then played the outfield and went 3 for 5 just two days later. Talk about an “Iron Man” performance…</p>
-
-<p><b>Fourth </b>will be the beginning of a series in which we will recognize the contributions of local veterans who served our country. Leading off this series will be the story of Walt Ouimet who served in WWII and again during the Korean War. He was a prisoner of war for 29 months during the Korean Conflict.</p>
-
-<p>There is much to read on a variety of topics in this upcoming issue. The Publications Committee has begun editing the articles. We hope to go to print in the next two weeks. Stay tuned as we progress.</p>
-
-<h3>OUR OTHER NEWS:</h3>
-<p>We will be reopening to the public for our regular schedule beginning on Wednesday, July 7. We will be open every Wednesday and Saturday morning from 9am until noon, starting July 7 through Wednesday, September 29.</p>
-
-<p>July 7 will also mark the opening of our first major exhibit in over 18 months. We are currently assembling the materials and objects for <b>“The History of Photography in Chateaugay.” </b>We have identified 25 photographers who have been associated with Chateaugay from the 1850s through 2021. We will have information about the photographers themselves, examples of their work, which will include many images of how Chateaugay has been portrayed over the years. Also, part of the exhibit will have examples of various photographic equipment and examples of different types of photographs.</p>
-
-<p>In addition, our newly rearranged public research area will be open anyone wishing to do local history or genealogical research. Our public computers have been set up with website links and data files to aid any researcher. Also, our shelves of public materials have been updated and rearranged for easy and efficient use.</p>
-
-<p>We have remained very busy during the COVID shutdown and we will be using the remaining weeks before July 7 to finish the photography exhibit, publish the newsletter and get the Archival Center ready for your visits and research. </p>
-
-<p>Please stop by and see all that we have to offer beginning on July 7. And, as always, thank you for the tremendous support you have given us over the years.</p>
         </div>
     </div>
 </div>
