Update Banner with Reopening and New Exhibit
A History of Photography in Chateaugay

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <!--COVID Banner -->
 <body>
   <div class="alert-box">
-    <span class="badge">COVID-19</span> We are currently closed to the public because of the COVID-19 pandemic. We will be reopening to the public on July 7, 2021. We look forward to seeing you soon!
+    <span class="badge">Reopening and New Exhibit</span> We are currently closed to the public because of the COVID-19 pandemic. We will be reopening to the public on July 7, 2021 and are excited to share our new exhibit, A History of Photography in Chateaugay. For more information, please click <a href="Exhibit-2021HistoryOfPhotographyInChateaugay.pdf" target="new">here</a>. We look forward to seeing you soon!
   </div>  
 </body>
  	
