--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <!--COVID Banner -->
 <body>
   <div class="alert-box">
-    <span class="badge">Reopening and New Exhibit</span> We are currently closed to the public because of the COVID-19 pandemic. We will be reopening to the public on July 7, 2021 and are excited to share our new exhibit, A History of Photography in Chateaugay. For more information, please click <a href="Exhibit-2021HistoryOfPhotographyInChateaugay.pdf" target="new">here</a>. We look forward to seeing you soon!
+    <span class="badge">Reopening and New Exhibit</span> We are now open to the public on Wednesdays and Saturdays from 9am-12pm. We are excited to welcome researchers back and share our new exhibit, A History of Photography in Chateaugay. For more information, please click <a href="Exhibit-2021HistoryOfPhotographyInChateaugay.pdf" target="new">here</a>. If you have NOT been vaccinated, you MUST wear a mask when entering the Town Hall. We look forward to seeing you soon!
   </div>  
 </body>
  	
