2021-06-06 Blog Edit - Python Automated Pages

--- a/Businesses.html
+++ b/Businesses.html
@@ -257,7 +257,7 @@
 
 <p>As a wise man once said, “the only constant in life is change.” We can always count on things evolving and changing. Some see change as good, others see it as a negative. Either way, it will happen – that much is guaranteed.</p>
 
-<p>West Main Street is now seeing a significant change. The former McCoy and Denio homes on the south side of West Main are gone, soon to be replaced with a Family Dollar store.</p>
+<p>West Main Street is now seeing a significant change. The former McCoy and Denio homes on the south side of West Main are gone, soon to be replaced with a Dollar General store.</p>
 
 <p>I have followed the entire process and have attempted to keep a comprehensive photo record as things have unfolded.</p>
 
